# SatSure-Machine-Learning-Assignment

ML_OPS/: Dockerfile  Dockerfile.serverless  PROJECT_SUMMARY.md  README.md  build_and_run.sh  cleanup-knative.sh  deploy-knative.sh  docker-compose.yml  kind-config.yaml  knative-service.yaml  pyproject.toml  requirements.txt  setup-cluster.sh  test_suite.py  validate_setup.py
ML_OPS/results/: benchmark_results.csv
ML_OPS/results/profiles/: profile_baseline_batch_1.txt
ML_OPS/results/tensorboard/: events.out.tfevents.1757487755.Prems-MacBook-Air.local.93071.0
ML_OPS/src/: __init__.py  benchmark.py  main.py  optimizations.py  serverless_app.py
